grammar.js
    source_file: $ => repeat(seq(
      choice(
        $.set_operation,
        $.select_statement,
        $.create_table_statement,
        $.create_view_statement,
        $.create_function_statement,
        $.drop_table_statement,
        $.drop_view_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.merge_statement,
        $.declare_statement,
        $.set_statement,
        $.begin_end_block
      ),
      optional(';')
    )),

    select_statement: $ => seq(
      optional($.with_clause),
      $.select_clause,
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.qualify_clause),
      optional($.window_clause),
      optional($.order_by_clause),
      optional($.limit_clause),
      optional($.offset_clause)
    ),

    select_clause: $ => seq(
      kw('SELECT'),
      optional(choice(kw('DISTINCT'), kw('ALL'))),
      prec.right(
        seq(
          $.select_item,
          repeat(seq(',', $.select_item)),
          optional(',') // Allow trailing comma
        )
      )
    ),

    select_item: $ => prec.right(0, choice(
      $.alias,
      $.star,
      $._expression
    )),

    from_clause: $ => seq(
      kw('FROM'),
      $._table_expression
    ),

    _table_expression: $ => choice(
      $.join_expression,
      $.table_alias,
      $.subquery,
      $.unnest_expression,
      $.pivot_expression,
      $.unpivot_expression,
      $.qualified_table_name,
      $.backtick_identifier,
      $.identifier
    ),

    // Stage 2: WHERE clause and expressions
    where_clause: $ => seq(
      kw('WHERE'),
      $._expression
    ),

    _expression: $ => optionalParenthesis(choice(
      $.binary_expression,
      $.unary_expression,
      $.in_expression,
      $.exists_expression,
      $.between_expression,
      $.is_null_expression,
      $.case_expression,
      $.cast_expression,
      $.window_function,
      $.function_call,
      $.array_access,
      $.field_access,
      $.subquery,
      $.array_literal,
      $.struct_literal,
      $.interval_literal,
      $.parameter_marker,
      $.system_variable,
      $.backtick_identifier,
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.boolean_literal
    )),

    // Binary expressions with precedence
    // OR has lowest precedence
    binary_expression: $ => choice(
      prec.left(1, seq(
        field('left', $._expression),
        kw('OR'),
        field('right', $._expression)
      )),
      // AND has higher precedence than OR
      prec.left(2, seq(
        field('left', $._expression),
        kw('AND'),
        field('right', $._expression)
      )),
      // Comparison operators and LIKE have higher precedence than AND/OR
      prec.left(3, seq(
        field('left', $._expression),
        choice('=', '!=', '<', '>', '<=', '>=', kw('LIKE')),
        field('right', $._expression)
      )),
      // Addition and subtraction
      prec.left(5, seq(
        field('left', $._expression),
        choice('+', '-'),
        field('right', $._expression)
      )),
      // Multiplication, division, and modulo have highest precedence
      prec.left(6, seq(
        field('left', $._expression),
        choice('*', '/', '%'),
        field('right', $._expression)
      ))
    ),

    // Unary expression (NOT)
    unary_expression: $ => prec(4, seq(
      kw('NOT'),
      $._expression
    )),

    // Parenthesized expression has highest precedence
    alias: $ => seq(
      $._expression,
      kw('AS'),
      field('alias', $.identifier)
    ),

    set_operation: $ => prec.left(seq(
      optionalParenthesis(choice($.select_statement, $.set_operation)),
      repeat1(
        seq(
          choice(
            seq(kw('UNION'), choice(kw('ALL'), kw('DISTINCT'))),
            seq(kw('UNION'), kw('ALL')),
            kw('UNION'),
            seq(kw('INTERSECT'), kw('DISTINCT')),
            kw('INTERSECT'),
            seq(kw('EXCEPT'), kw('DISTINCT')),
            kw('EXCEPT')
          ),
          optionalParenthesis(choice($.select_statement, $.set_operation)),
        )
      )
    )),

    // Stage 4: JOIN operations
    table_alias: $ => seq(
      field('table', choice(
        $.identifier,
        $.backtick_identifier,
        $.subquery,
        $.unnest_expression,
        $.qualified_table_name
      )),
      optional(kw('AS')),
      field('alias', $.identifier)
    ),

    field_access: $ => prec.left(seq(
      field('object', choice(
        $.identifier,
        $.backtick_identifier,
        $.field_access,
        $.array_access
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.backtick_identifier
      ))
    )),

    // Array element access with brackets
    array_literal: $ => seq(
      '[',
      optional(commaSep1($._expression)),
      ']'
    ),

    struct_literal: $ => seq(
      kw('STRUCT'),
      '(',
      optional(commaSep1($.struct_field)),
      ')'
    ),

    struct_field: $ => seq(
      $._expression,
      kw('AS'),
      field('alias', $.identifier)
    ),

    unnest_expression: $ => seq(
      kw('UNNEST'),
      '(',
      $._expression,
      ')'
    ),

    // PIVOT expression
    qualified_table_name: $ => seq(
      choice($.identifier, $.backtick_identifier),
      '.',
      choice(
        // project.dataset.table or project.dataset.table_*
        seq(
          $.identifier,
          '.',
          choice($.identifier, $.table_name_with_wildcard)
        ),
        // dataset.table or dataset.table_*
        choice($.identifier, $.table_name_with_wildcard)
      )
    ),

    // Table name with wildcard suffix
    table_name_with_wildcard: $ => seq(
      $.identifier,
      token.immediate('*')
    ),

    backtick_identifier: $ => /`[^`]+`/,

    // Stage 7: Window functions
    type: $ => choice(
      // Simple types
      kw('INT64'),
      kw('FLOAT64'),
      kw('STRING'),
      kw('BOOL'),
      kw('BYTES'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIME'),
      kw('TIMESTAMP'),
      // Complex types (simplified for now)
      seq(kw('ARRAY'), '<', $.type, '>'),
      seq(kw('STRUCT'), '<', commaSep1($.struct_type_field), '>'),
      // Generic identifier for custom types
      $.identifier
    ),

    insert_statement: $ => seq(
      kw('INSERT'),
      optional(kw('INTO')),
      field('table', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      optional($.column_list),
      choice(
        $.values_clause,
        $.select_statement
      )
    ),

    update_statement: $ => seq(
      kw('UPDATE'),
      field('table', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      $.set_clause,
      optional($.where_clause)
    ),

    delete_statement: $ => seq(
      kw('DELETE'),
      optional(kw('FROM')),
      field('table', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      optional($.where_clause)
    ),

    // MERGE statement
    column_list: $ => seq(
      '(',
      commaSep1($.identifier),
      ')'
    ),

    values_clause: $ => seq(
      kw('VALUES'),
      commaSep1($.value_list)
    ),

    value_list: $ => seq(
      '(',
      commaSep1($._expression),
      ')'
    ),

    set_clause: $ => seq(
      kw('SET'),
      commaSep1($.assignment)
    ),

    assignment: $ => seq(
      field('column', choice($.field_access, $.identifier)),
      '=',
      field('value', $._expression)
    ),

    // Stage 10: Advanced features
    case_expression: $ => seq(
      kw('CASE'),
      optional(field('value', $._expression)),
      repeat1($.when_clause),
      optional($.case_else_clause),
      kw('END')
    ),

    when_clause: $ => seq(
      kw('WHEN'),
      field('condition', $._expression),
      kw('THEN'),
      field('result', $._expression)
    ),

    case_else_clause: $ => seq(
      kw('ELSE'),
      $._expression
    ),

    cast_expression: $ => seq(
      choice(kw('CAST'), kw('SAFE_CAST')),
      '(',
      $._expression,
      kw('AS'),
      $.type,
      ')'
    ),

    between_expression: $ => seq(
      $._expression,
      kw('BETWEEN'),
      $._expression,
      kw('AND'),
      $._expression
    ),

    is_null_expression: $ => seq(
      $._expression,
      kw('IS'),
      optional(kw('NOT')),
      kw('NULL')
    ),

    // Primitives
    star: $ => '*',

    // INTERVAL literals
    number_literal: $ => /\d+/,

    string_literal: $ => choice(
      seq("'", /[^']*/, "'"),
      seq('"', /[^"]*/, '"')
    ),

    boolean_literal: $ => choice(
      kw('TRUE'),
      kw('FALSE')
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Parameter marker (@param_name)
